[gd_scene load_steps=7 format=3 uid="uid://dvybp8157i3m7"]

[ext_resource type="Shader" uid="uid://b0p12g6dupxur" path="res://color.gdshader" id="1_lti8b"]
[ext_resource type="Script" uid="uid://ds2ftp3j0ojxj" path="res://menu.gd" id="1_ouk20"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ouk20"]
shader = ExtResource("1_lti8b")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_ouk20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/VBoxContainer/ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lti8b"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/VBoxContainer/ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ouk20"]
_data = {
&"RESET": SubResource("Animation_ouk20"),
&"blur": SubResource("Animation_lti8b")
}

[node name="menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ouk20")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 699.0
offset_top = 266.0
offset_right = 1137.0
offset_bottom = 734.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="continuar" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Continuar"

[node name="reiniciar" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Reiniciar"

[node name="salir" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Salir
"

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_ouk20")
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ouk20")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/salir" to="." method="_on_salir_pressed"]
